fix card size on tablet screen (#5) (#6)
* finish card styles

* fix card size on table size

* update media query

---------

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
 
 /* MEDIA QUERIES */
 
-@media (width > 700px) {
+@media (width > 600px) {
   body {
     margin: 0 3.125rem;
     padding: var(--spacing-1600) var(--spacing-600) 0;
